# racegame

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Readme.md  addon.py  artwork.txt  blender_exporter.py  build.py  build.sh  build_assets.py  credit.txt  fetch_dependencies.py  old_menu.cpp  run.sh  todo.txt  utils.py
assets/: cactus.blend  car.blend  colors.txt  credit.txt  cubevan.blend  drivers.txt  drivers.txt]  materials.txt  racecar.blend  sportscar.blend  tree.blend  vehicle_data.txt  world.blend
assets/decals/: .gitattributes
assets/models/: barrel.blend  billboard.blend  cactus.blend  cliff.blend  concrete_barrier.blend  ctvpole.blend  mine.blend  money.blend  palmtree.blend  pine.blend  plants.blend  railing.blend  railing2.blend  rock.blend  rocks.blend  rumblestrip.blend  start.blend  start_simple.blend  tanks.blend  test.blend  tree.blend  windmill.blend  world.blend  wrench.blend
assets/models/vehicles/: coolcar.blend  mini.blend  muscle.blend  muscle2.blend  racecar.blend  sportscar.blend  stationwagon.blend
assets/models/weapons/: blaster.blend  bouncer.blend  minigun.blend  missile.blend  scattergun.blend  scattergun.blend1
assets/shaders/: billboard.glsl  blit.glsl  blit2.glsl  bloom_filter.glsl  blur.glsl  csz.glsl  debug.glsl  decal.glsl  lighting.glsl  lit.glsl  mesh2D.glsl  mesh_decal.glsl  overlay.glsl  post.glsl  post_process.glsl  quad2D.glsl  ribbon.glsl  sample_shadow.glsl  sao.glsl  shader.glsl  shadow.glsl  terrain.glsl  track.glsl  triplanar.glsl  triplanar_dull.glsl  wheel.glsl  worldinfo.glsl
assets/sounds/: credit.txt
assets/vehicles/: cubevan.txt  mini.blend  mini.txt  racecar.blend  racecar.txt  sportscar.blend  sportscar.txt  truck.blend
shaders/: billboard.glsl  blit.glsl  bloom_filter.glsl  blur.glsl  blur2.glsl  csz.glsl  csz_minify.glsl  cubemap_test.glsl  debug.glsl  flames.glsl  highlight_id.glsl  lighting.glsl  lit.glsl  mesh2D.glsl  mesh_decal.glsl  overlay.glsl  post.glsl  post_process.glsl  quad2D.glsl  ribbon.glsl  sao.glsl  sao_blur.glsl  terrain.glsl  track.glsl  trilinear.glsl  triplanar.glsl  worldinfo.glsl
src/: .renderer_opengl.cpp.swp  2d.h  ai_driver_data.h  array.h  audio.cpp  audio.h  batcher.cpp  batcher.h  billboard.h  bounding_box.h  buffer.h  collision_flags.h  common.h  config.h  datafile.cpp  datafile.h  debug_draw.h  decal.cpp  decal.h  driver.cpp  driver.h  dynamic_buffer.cpp  dynamic_buffer.h  editor.cpp  editor.h  editor_camera.cpp  editor_camera.h  entity.h  font.cpp  font.h  game.cpp  game.h  gl.h  gui.cpp  gui.h  imgui.cpp  imgui.h  input.h  main.cpp  map.h  (+62 more)
src/editor/: ai_editor.h  decoration_mode.h  editor.cpp  editor.h  editor_camera.cpp  editor_camera.h  editor_mode.h  material_editor.h  model_editor.cpp  model_editor.h  path_mode.h  resource_editor.h  resource_manager.cpp  resource_manager.h  sound_editor.h  spline_mode.h  terrain_mode.h  texture_editor.h  track_editor.cpp  track_editor.h  track_mode.h  transform_gizmo.h  vehicle_editor.h  vinyl_pattern_editor.h
src/entities/: barrel.h  billboard.h  booster.cpp  booster.h  entities.cpp  flash.cpp  flash.h  glue.cpp  glue.h  mine.cpp  mine.h  oil.cpp  oil.h  pickup.h  projectile.cpp  projectile.h  rock.cpp  rock.h  start.cpp  start.h  static_decal.cpp  static_decal.h  static_mesh.cpp  static_mesh.h  tree.cpp  tree.h
src/vehicles/: coolcar.h  mini.h  muscle.h  muscle2.h  racecar.h  sportscar.h  stationwagon.h  truck.h
src/weapons/: auto_repair.h  blaster.h  bouncer.h  explosive_mine.h  glue.h  homing_missiles.h  jumpjets.h  kinetic_armor.h  machinegun.h  missiles.h  oil.h  phantom.h  ram_booster.h  rocket_booster.h  scattergun.h  underplating.h
